tests/base/parser/bad/exps/exp_t-spid-cid-with.scilexp
let id = fun (x: Bool) => x in
id False
